[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/object/item/Item.gd" type="Script" id=1]
[ext_resource path="res://assets/object/item/potions.png" type="Texture" id=2]
[ext_resource path="res://prefab/common/interactable.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefab/ui/interactable/interact_popup.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.0306, 6.9252 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.75, 6.08335 )

[node name="Item" instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )
vframes = 10
hframes = 10
frame = 2

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="InteractPopup" parent="." index="2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -7.68877
margin_top = -24.3661
margin_right = -7.68877
margin_bottom = -24.3661
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 0
size_flags_vertical = 0
interact_label_text = "E"
title_label_text = "Potion"

[node name="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
